ajustes no layout

--- a/css/main.css
+++ b/css/main.css
@@ -5,19 +5,18 @@
 @import url("bxslider.css");
 
 #go-top {
-	width: 97px;
-	height: 97px;
+	width: 65px;
+	height: 65px;
 	border-radius: 100px;
-	background: #01567d;
+	background: #9ed8f2;
 	position: fixed;
 	bottom: 60px;
 	right: 60px;
 	text-align: center;
-	color: #9ed8f2;
-	padding-top: 35px;
-	display: block;
-	font-size: 27px;
-	line-height: 27px;
+	color: #005167;
+	padding-top: 20px;
+	font-size: 25px;
+	line-height: 20px;
 	display: none;
 }
 
@@ -48,10 +47,10 @@
 	display: block;
 	position: relative;
 	color: #005167;
-	font-size: 42px;
-	line-height: 31px;
+	font-size: 34px;
+	line-height: 34px;
 	font-weight: 300;
-	height: 51px;
+	height: 50px;
 	text-transform: uppercase;
 	text-align: center;
 	margin: 107px auto 37px auto
@@ -93,87 +92,134 @@
 }
 
 .main-header .menu-top {
-	padding: 55px 0 34px 0;
+	background: #6c8d9d;
+	font-size: 13px;
+	font-weight: 300;
+	color: #fff;
+	text-transform: uppercase;
+	padding: 24.5px 0;
+	text-align: center;
+}
+.main-header .menu-top a {
+	color: #fff;
+}
+.main-header .menu-top a:hover {
+	text-decoration: underline;
 }
 
-.main-header .menu-top li {
+body.scrolled .main-header {
+	margin-bottom: 122px;
+}
+
+.main-header .menu-mid {
+	padding: 33.5px 0;
+	background: #fff;
+
+}
+body.scrolled  .main-header .menu-mid {
+	padding: 17.5px 0;
+}
+.main-header .menu-mid li {
 	float: left;
 }
 
-.main-header .menu-top .logo {
+.main-header .menu-mid .logo {
 	width: 280px;
 	position: relative;
-	top: -10px;
+	top: 3px;
 }
 
-.main-header .menu-top .logo a{
+.main-header .menu-mid .logo a{
 	font-size: 51px;
 	line-height: 51px;
 	color: #01567d;
 	padding: 0 30px 0 0;
 	display: block;
+	-webkit-transition: all 100ms ease-in-out;
+	-ms-transition: all 100ms ease-in-out;
+	transition: all 100ms ease-in-out;
 }
 
-.main-header .menu-top .logo h1 {
+body.scrolled .main-header .menu-mid .logo a {
+	font-size: 36px;
+	line-height: 36px;
+}
+
+.main-header .menu-mid .logo h1 {
 	display: none;
 }
 
-.main-header .menu-top .support {
-	height: 40px;
-	border-left: 2px solid #01567d;
-	position: relative;
-	padding-left: 30px;
 
-}
-.main-header .menu-top .support a {
+.main-header .menu-mid .search {
 	position: relative;
-	top: -10px;
-}
-.main-header .menu-top .search {
-	position: relative;
-	top: -10px;
-	width: 242px;
-	margin: 13px 0px 0 40px;
+	top: 7px;
+	width: 301px;
+	float: right;
+	margin: 0px ;
 }
 
-.main-header .menu-top .search input[type="text"] {
-	border: 0px none;
-	border-bottom: 2px solid #d1cccc;
-	font-size: 22px;
-	width: 227px;
+body.scrolled .main-header .menu-mid .search {
+	display: none;
+}
+
+.main-header .menu-mid .search input[type="text"] {
+	border: 1px solid #d1cccc;
+	font-size: 12px;
+	border-radius: 10px;
+	width: 301px;
+	height: 43px;
 	display: block;
 	float: left;
 	font-family: "Lato", sans-serif;
 	font-weight: 300;
 	outline: none;
-	padding: 5px 39px 5px 5px;
+	padding: 5px 40px 5px 15px;
 	background: #fff;
 }
 
-.main-header .menu-top .search button {
-	width: 39px;
-	height: 38px;
+.main-header .menu-mid .search button {
+	width: 23px;
+	height: 23px;
 	background: transparent;
 	border: 0px none;
-	font-size: 38px;
-	line-height: 38px;
+	font-size: 23px;
+	line-height: 23px;
 	display: block;
 	float: left;
 	outline: none;
 	color: #d1cccc;
 	position: absolute;
-	right: 0px;
-	top: 1px;
+	right: 15px;
+	top: 10px;
 	z-index: 2;
 	cursor: pointer;
 }
-.main-header .menu-top .client-area {
+
+.main-header .menu-mid .main-links {
+	display: none;
 	float: right;
-	position: relative;
-	top: -10px
+	font-weight: 300;
+	font-size: 13px;
+	color: #6c8d9d;
+	text-transform: uppercase;
+	margin-top: 13px;
 }
+.main-header .menu-mid .main-links a {
+	color: #6c8d9d;
+	margin-right: 55px;
+}
+.main-header .menu-mid .main-links a:last-child {
+	margin-right: 0px;
+}
+.main-header .menu-mid .main-links a:hover {
+	text-decoration: underline;
+}
+body.scrolled .main-header .menu-mid .main-links {
+	display: block;
+}
+
 .main-header .menu-down {
-	background: #01567d;
+	background: #005167;
 }
 
 .main-header .menu-down .main-menu>ul {
@@ -191,18 +237,18 @@
 	background: #9ed8f2;
 	display: block;
 	content: "";
-	top: 22px;
+	top: 12px;
 	left: -1px;
 }
 
 .main-header .menu-down .main-menu>ul>li:first-child:after {
-	background: #01567d;
+	background: #005167;
 }
 .main-header .menu-down .main-menu>ul>li>a {
 	display: block;
 	color: #fff;
-	font-size: 18px;
-	padding: 31px 20px 31px 20px; 
+	font-size: 15px;
+	padding: 23px 32px; 
 	text-align: center;
 	text-transform: uppercase;
 	-webkit-transition: all 200ms ease-in-out;
@@ -218,6 +264,17 @@
 	overflow:hidden;
 	visibility:hidden;
 }
+
+body.scrolled .main-header .menu-down .main-menu>ul>li>a {
+	font-size: 13px;
+	padding: 16px 32px;
+}
+
+body.scrolled .main-header .menu-down .main-menu>ul>li:after {
+	height: 30px;
+	top: 10px;
+}
+
 .main-header .menu-down .main-menu>ul li a:hover, .main-header .menu-down .main-menu>ul li:hover {
 	font-weight: 900;
 }
@@ -227,14 +284,18 @@
 	background: #fff;
 	padding: 0 22px;
 	position: absolute;
-	top: 83px;
+	top: 64px;
 	left: -1px;
 	z-index: 3;
 }
 
+body.scrolled .main-header .menu-down .main-menu>ul li ul {
+	top: 47px;	
+}
+
 .main-header .menu-down .main-menu>ul li ul li {
 	display: block;
-	width: 156px;
+	width: 160px;
 	border-bottom: 1px solid #c5e8f7;
 	font-weight: initial;
 	text-transform: uppercase;
@@ -247,11 +308,16 @@
 	padding: 11px 6px;
 	text-align: left;
 	color: #6f7172;
-	font-size: 18px;
+	font-size: 16px;
 	-webkit-transition: all 200ms ease-in-out;
 	-ms-transition: all 200ms ease-in-out;
 	transition: all 200ms ease-in-out;
 }
+
+body.scrolled .main-header .menu-down .main-menu>ul li ul li a {
+	font-size: 13px;
+}
+
 .main-header .menu-down .main-menu>ul li ul li a:hover {
 	font-weight: 900px;
 }
@@ -259,9 +325,23 @@
 	display: block;	
 }
 
+
+body.scrolled .main-header .menu-mid, body.scrolled .main-header .menu-down {
+	position: fixed;
+	width: 100%;
+	z-index: 999;
+}
+
+body.scrolled .main-header .menu-mid {
+	top: 0px;
+}
+body.scrolled .main-header .menu-down {
+	top: 75px;
+}
+
 .main-footer {
 	background: #005167;
-	margin-top: 115px;
+	margin-top: 0px;
 	padding: 70px 0;
 }
 
@@ -305,8 +385,8 @@
 	margin: 0 15px;
 }
 .main-footer .footer-top .social li a {
-	font-size: 31px;
-	line-height: 31px;
+	font-size: 25px;
+	line-height: 25px;
 	display: block;
 	color: #fff;
 	-webkit-transition: color 200ms ease-in-out;
@@ -375,7 +455,7 @@
 }
 
 .main-banner li h2 {
-	font-size: 45px;
+	font-size: 36px;
 	line-height: 55px;
 	font-weight: 300;
 	color: #fff;
@@ -385,13 +465,14 @@
 }
 
 .main-banner li h3 {
-	font-size: 29px;
+	font-size: 25px;
 	line-height: 36px;
 	font-weight: 400;
 	color: #fff;
 	margin-bottom: 50px;
 	position: relative;
 	z-index: 3;
+	letter-spacing: -0.5px;
 }
 
 .main-banner li .photo-banner {
@@ -449,22 +530,23 @@
 
 .solutions-banner li a {
 	text-align: center;
-	color: #005167;
+	color: #dc5925;
 }
 
 .solutions-banner li a strong {
 	display: block;
 	font-weight: 400;
-	font-size: 26px;
+	font-size: 23px;
+	width: 169px;
 	line-height: 1.2;
 	text-transform: uppercase;
 	margin-top: 15px;
 }
 .solutions-banner li span {
-	font-size: 78px;
+	display: block;
 	width: 169px;
 	height: 169px;
-	background: #dddfe1;
+	background: #f39a26;
 	padding-top: 50px;
 	padding: 45px 35px;
 	-webkit-transition: background 200ms ease-in-out;
@@ -472,25 +554,28 @@
 	transition: background 200ms ease-in-out;
 }
 .solutions-banner li span:before {
-	display: inline-block;
+	display: none;
+}
+.solutions-banner li span:after {
+	display: none;
 }
 .solutions-banner li:hover span {
 	background: #fff;
 }
 
 .features a h3 {
-	margin-top: 20px;
+	margin-top: 17px;
 	font-weight: 700;
 	color: #005167;
-	font-size: 24px;
+	font-size: 20px;
 	line-height: 31px;
 }
 
 .features a p {
-	margin-top: 25px;
+	margin-top: 17px;
 	font-weight: 400;
 	color: #757777;
-	font-size: 17px;
+	font-size: 16px;
 	line-height: 24px;
 }
 .features .controlers>span {
@@ -542,7 +627,25 @@
 	transition: opacity 200ms ease-in-out;
 }
 
+.awards .slider-features ul li a {
+	height: 128px;
+	width: 170px;
+	text-align: center;
+	display: table-cell;
+	vertical-align: middle;
+}
+.awards .slider-features ul li a img {
+	-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+	-webkit-transition: filter 200ms ease-in-out;
+	-ms-transition: filter 200ms ease-in-out;
+	transition: filter 200ms ease-in-out;	
+}
 
+.awards .slider-features ul li a:hover img {
+	-webkit-filter: grayscale(0%);
+	filter: grayscale(0%);
+}
 
 .clients {
 	background: #eee;
@@ -558,6 +661,45 @@
 }
 .use-it .controlers a {
 	color: #b5b5b5;
+}
+
+.map {
+	padding: 30px 0;
+	font-size: 14px;
+	color: #87888a;
+}
+
+.map #svg-map {
+	margin: 0 auto;
+	width: 320px;
+	height: 330px;
+	display: block;
+}
+
+.map #svg-map path {
+	cursor: pointer;
+	-webkit-transition: all 200ms ease-in-out;
+	-ms-transition: all 200ms ease-in-out;
+	transition: all 200ms ease-in-out;
+}
+.map #svg-map path:hover, .map #svg-map path.ativo {
+	fill: #0387ab;
+}
+
+.map .enderecos ul {
+	display: none;
+}
+.map .enderecos ul li {
+	margin-top: 20px;
+}
+.map .enderecos ul li h5 {
+	font-weight: 700;
+	font-size: 14px;
+	margin-bottom: 5px;
+}
+
+.map .dica-mapa {
+	margin-top: 150px;
 }
 
 /*
