correcao do amarelo

--- a/css/main.css
+++ b/css/main.css
@@ -944,7 +944,7 @@ body.scrolled .main-header .menu-down {
 }
 
 .texto-principal .link-interativo.yellow.ativo {
-	background: #ffeb3b;
+	background: #ebdfae;
 }
 
 .texto-principal .link-interativo.yellow.ativo a {
